add admin route-controller-service

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -43,10 +43,10 @@
     margin-bottom: 20px;
 }
 
-.form--products a:hover {
+/* .form--products a:hover {
     color: black;
     text-decoration: underline;
-}
+} */
 
 .main__buttons--products {
     width: 100%;
