--- a/src/views/products/productDelete.ejs
+++ b/src/views/products/productDelete.ejs
@@ -11,7 +11,7 @@
     
     <main class="main--form">
         
-        <form action="/products/delete/<%=product.id%>?_method=delete" method="POST" class="product--form">
+        <form action="/admin/delete/<%=product.id%>?_method=delete" method="POST" class="product--form">
             
             <label class="main__register--titulares">Eliminar producto </label>
             <div class="control--form">
@@ -56,8 +56,10 @@
             </div>
 
             <br>
-                  
-            <button type="submit" class="button--form">Eliminar</button>
+            <div class="main--buttons">
+                <button type="submit" class="main__buttons--products">Eliminar</button>
+                <a class="product--butt" href="/admin/">Cancelar</a>
+            </div>     
         </form>
     </main>
 
