--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -23,6 +23,8 @@
             <p class="main__input--desc">Contraseña</p>
             <input class="main__form--inputs" type="password" name="passwordUser" value="">
             
+            <input class="main__input--desc" type="checkbox" id="rememberSession" name="rememberSession" value=""><label for="rememberSession"> Recordar sesión </label>
+        
             <button class="main__buttons--login" type="submit" >Iniciar sesión</button>
             
             <div class="main__form--bottom-options">
