--- a/public/css/login.css
+++ b/public/css/login.css
@@ -50,7 +50,7 @@
     font-size: 14px;
 }
 
-.main__buttons--login {
+.main__buttons--logins {
     width: 100%;
     background: #344C2A;
     border: none;
@@ -58,6 +58,7 @@
     font-family: "Poppins", sans-serif;
     padding: 12px;
     color: white;
+    margin-top: 10px;
     margin-bottom: 20px;
   }
 
