--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,6 +60,22 @@
 .header--logo:hover{
     width: 76px; 
 }
+.header--avatar{
+    width:49px;
+    margin-top:-18px;
+    margin-right: -3px;
+}
+/* Invisible texto */
+.header--users {
+    display:none; 
+    transition: all .10s;
+}
+/* Visible texto */
+figure:hover > .header--users {
+    display:block;
+    margin-top:-9px;
+    font-size: 13px;
+}
 
 .header__nav--menu{
     display: none;
@@ -186,6 +202,14 @@
     margin: -24px 0 10px 10px;
 }
 /* Fin Footer */
+.input--error {
+    margin-top: -10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color: red; 
+    font-size: 12px;
+}
+
 .main--form {
     box-shadow:
         inset 0 -10px 40px 21px rgb(255,255,255),
@@ -431,6 +455,10 @@
         max-width: 1200px;
         margin: 0 auto; 
         align-items: center;  
+    }
+    .header__main--bar{
+        max-width: 1200px;
+        margin: 0 auto;
     }
     .header__nav--menu {
         max-width: 1200px;
