--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/headerReduce.ejs') %>
     
     <main class="main--form">
         <form action="/admin/" method="POST" enctype="multipart/form-data" class="form--products">
@@ -22,7 +22,7 @@
             
             
 
-        <label class="main__input--desc" for="images">Imágenes</label>
+    <label class="main__input--desc" for="images">Imágenes</label>
     <input class="main__form--inputs" type="file" name="images" id="imageInput" multiple accept="image/*">
     <div id="previewContainer"></div>
 
@@ -45,9 +45,6 @@
             }
         });
     </script>
-
-
-
 
             <label class="main__input--desc" for="price">Precio</label>
             <input type="number" class="main__form--inputs" id="price" name="price" ></br>          
@@ -97,7 +94,7 @@
 
     </main>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../partials/footerReduce.ejs') %>
 </body>
 
 </html>
