--- a/src/views/products/productDelete.ejs
+++ b/src/views/products/productDelete.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/headerReduce.ejs') %>
     
     <main class="main--form">
         
@@ -63,6 +63,6 @@
         </form>
     </main>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../partials/footerReduce.ejs') %>
 </body>
 </html>
