--- a/src/views/products/productsAdmin.ejs
+++ b/src/views/products/productsAdmin.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/headerReduce.ejs') %>
 
 <main class="main--form">
     <div class="form--products">
@@ -63,6 +63,6 @@
     </div>    
 </main>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../partials/footerReduce.ejs') %>
 </body>
 </html>
