--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -38,7 +38,7 @@
 
             
             <p class="main__input--desc">Fecha de Nacimiento:</p>
-            <input type="date" id="userBirthdate" name="userBirthdate" class="main__form--inputs" value="">
+            <input type="date" id="userBirthdate" name="userBirthdate" class="main__form--inputs" value="<%= locals.old && old.userBirthdate %>">
             
             <p class="main__input--desc" for="image">Foto Usuario:</p>
             <input class="main__form--inputs" type="file" name="image" id="imageInput" accept=".jpg, .png, .svg">
@@ -65,13 +65,16 @@
             </script>
 
             <p class="main__input--desc">Contraseña*</p>
-            <input class="main__form--inputs" type="password" name="passwordUser" id="passwordUser" value="" placeholder="Contraseña">
+            <input class="main__form--inputs" type="password" name="passwordUser" id="passwordUser" placeholder="Contraseña">
             <% if (locals.errors && errors.passwordUser) { %>
                 <p class= "input--error"><%= errors.passwordUser.msg %></p>
             <% } %>
             
             <p class="main__input--desc">Repetir contraseña*</p>
-            <input class="main__form--inputs" type="password" name="passwordUserRepeat" id="password2">
+            <input class="main__form--inputs" type="password" name="confirmPassword" id="confirmPassword" placeholder="Repetir Contraseña">
+            <% if (locals.errors && errors.confirmPassword) { %>
+                <p class= "input--error"><%= errors.confirmPassword.msg %></p>
+            <% } %>
             
             <div>
                 <input type="checkbox" id="cbox1" value="first_checkbox"> Estoy de acuerdo con <a href="#">Terminos y Condiciones</a>
