--- a/public/css/index.css
+++ b/public/css/index.css
@@ -37,6 +37,50 @@
     padding-top: 15px;
     margin: 0 15px 15px 15px; 
 }
+
+/* banner slides  */
+.slider-container {
+    position: relative;
+}
+.slider {
+    width: 73%;
+    margin: 0 auto
+}
+.slides {
+    display: flex;
+    padding-top: 30px;
+}
+.slide {
+    display: none;
+    width: 73%;
+    box-shadow: 0 0 10px #64646499;
+    border-radius: 10px;
+    height: auto;
+}
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.prev {
+    left: 270px; 
+}
+.next {
+    right: 270px;
+}
+.icon--arrow {
+    font-size: 40px;
+    color:#344c2a;
+    transition: all 300ms;   
+}
+.icon--arrow:hover{
+    font-size: 60px;
+} 
+/* fin slides */
+
 .main__section--send{
     font-family: "Roboto", sans-serif;
     text-align: center;
@@ -53,7 +97,7 @@
 .main__secction--article{
     align-self: stretch;
     margin: 9px;
-    border: solid 0.6px rgb(52, 76, 42);
+    border: solid 0.6px #344c2a;
     border-radius: 10px;
     transition: all 700ms;
 }
