--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,40 +39,18 @@
 }
 
 /* banner slides  */
-.slider-container {
-    position: relative;
+.banner--slides{
+    padding-top: 21px;
 }
-.slider {
-    width: 73%;
-    margin: 0 auto
-}
-.slides {
-    display: flex;
-    padding-top: 30px;
-}
-.slide {
-    display: none;
-    width: 73%;
+.banner--slide {
+    display: block;
+    width: 54%;
+    margin: 0 auto;
     box-shadow: 0 0 10px #64646499;
     border-radius: 10px;
-    height: auto;
-}
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
-.prev {
-    left: 270px; 
-}
-.next {
-    right: 270px;
 }
 .icon--arrow {
-    font-size: 40px;
+    font-size: 3em;
     color:#344c2a;
     transition: all 300ms;   
 }
