--- a/public/css/register.css
+++ b/public/css/register.css
@@ -5,7 +5,7 @@
     padding: 10px;
     font-family: "Poppins", sans-serif;
     font-size: 20px;
-    /* color:#1B1B1D; */
+    color:#1B1B1D;
 }
 
 .main__form--inputs {
@@ -20,7 +20,6 @@
 .form--register {
     width: 100%;
     max-width: 550px;
-    /* background-color: #f1f3f0; */
     border: none;
     padding: 20px 30px;
     color: black;
@@ -28,16 +27,6 @@
     font-size: 16px;
     border-radius: 4px;
     padding: 20px 30px;
-}
-
-.form--register h4 {
-    font-size: 22px;
-    margin-bottom: 20px;
-}
-
-.form--register a:hover {
-    color: black;
-    text-decoration: underline;
 }
 
 .main__buttons--register {
@@ -50,14 +39,12 @@
     color: white;
     margin-bottom: 20px;
 }
-
 .main__register--titulares {
     font-family: "Poppins", sans-serif;
     font-size: 20px;
     color:#1B1B1D;
     height: 40px;
-    /* margin-left: 20px;  */
-  }
+}
 
 .main__input--desc {
     text-align: left;
