--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -43,26 +43,7 @@
             <p class="main__input--desc" for="image">Foto Usuario:</p>
             <input class="main__form--inputs" type="file" name="image" id="imageInput" accept=".jpg, .png, .svg">
             <div id="previewContainer"></div>
-        
-            <script>
-                document.getElementById('imageInput').addEventListener('change', function(event) {
-                    const files = event.target.files;
-                    const previewContainer = document.getElementById('previewContainer');
-                    previewContainer.innerHTML = ''; // Limpiar previsualizaciones anteriores
-        
-                    for (const file of files) {
-                        const reader = new FileReader();
-                        reader.onload = function(e) {
-                            const img = document.createElement('img');
-                            img.src = e.target.result;
-                            img.style.maxWidth = '90px';
-                            img.style.maxHeight = '90px';
-                            previewContainer.appendChild(img);
-                        };
-                        reader.readAsDataURL(file);
-                    }
-                });
-            </script>
+            <script src="/scripts/userRegisterPhoto.js"></script>
 
             <p class="main__input--desc">Contraseña*</p>
             <input class="main__form--inputs" type="password" name="passwordUser" id="passwordUser" placeholder="Contraseña">
