--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,10 +11,9 @@
     <main class="main--home">
         
         <div class="banner--slides">
-            <img class="banner--slide" id="slider" src="/images/slides/slide1.jpg">
+            <img class="banner--slide" id="slider0" src="/images/slides/slide1.jpg">
         </div>
-        <script src="scripts/bannerScripts.js"></script>
-
+        
         <section class="main--section">
             <h3 class="main--titulares">Categorías</h3>
             <div class="main__section--div4">
@@ -71,13 +70,13 @@
                 </div>
         </section>
 
-        <section class="main--section">
+        <div class="main--section">
             <h3 class="main--titulares">Promociones</h3>
-            <article class="main--banner">
-                    <img class="banner" src="/images/banner-el-mateador-02.jpg" alt="Programacion Full Stack">                     
-            </article>
-        </section>
-
+        </div>
+        <div class="banner--slides">
+            <img class="banner--slide" id="slider1" src="/images/slides/slide3.jpg">
+        </div>
+        
         <section class="main--section">
             <h3 class="main--titulares">Ofertas exclusivas</h3>
             <div class="main__section--div4">
@@ -145,6 +144,9 @@
     </main>
     
     <%- include('./partials/footer.ejs') %>
+
+    <script src="scripts/bannerHome.js"></script>
+    <script src="scripts/bannerHome.js"></script>
 </body>
 </html>
 
