--- a/public/css/productAll.css
+++ b/public/css/productAll.css
@@ -15,9 +15,8 @@
     font-family: "Poppins", sans-serif;
     font-size: 20px;
     color:#1B1B1D;
-    height: 40px;
-    margin: 24px;
-  }
+    padding-top: 15px;
+}
 .product-box_image {
     display:flex;
     width: 100%;
