--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,8 +190,8 @@
 
 .main--form {
     box-shadow:
-        inset 0 -10px 40px 21px rgb(255,255,255),
-        inset 0 6px 9px 0px rgb(100, 100, 100, 0.6 );
+    inset 0 -10px 40px 21px rgb(255,255,255),
+    inset 0 6px 9px 0px rgb(100, 100, 100, 0.6);
     padding: 10px;
     font-family: "Poppins", sans-serif;
     font-size: 20px;
@@ -364,9 +364,22 @@
 .price {
     margin: 15px;
 }
+.span--detail{
+    box-shadow: 6px 6px 10px #344c2a99; 
+    border-radius: 6px;
+    margin-left: 15px
+}
+.select--stock{
+    font-size: 16px;
+    border-radius: 10px;
+    border-style: none;
+    margin: 0;
+    padding: 0;
+}
 
 .label {
     padding-left: 15px;
+    margin: 0;
 }
 
 .product__details {
@@ -431,6 +444,11 @@
         margin: 0 auto;
     }
     .main--section {
+        max-width: 1200px;
+        margin: 0 auto; 
+        align-items: center;  
+    }
+    .main__products--titulares{
         max-width: 1200px;
         margin: 0 auto; 
         align-items: center;  
