--- a/src/views/products/productAll.ejs
+++ b/src/views/products/productAll.ejs
@@ -14,32 +14,26 @@
     <main class="main--form">
         <!-- Todos los productos -->
 		<h3 class="main__products--titulares">Todos los productos</h3>
-		
+
 		<div class="main--div">
-			<% products.forEach ((product)=>{ %>
-				
+			<% productos.forEach ((product)=>{ %>
 				<section class="product-box">
 				<a class="product--href" href="productDetail/<%=product.id%>">
 					<figure class="product-box_image">
-						<% for(let images of product.images) { %>
-                            <img class="image__product" id="images" name="images" src="/images/<%= images %>" alt="<%=product.name %>">
-                        <% } %>
+						<% for( let i = 0; i < product.producto.length; i++ ) { %>
+							<img class="image__product" id="images" name="images" src="/images/<%= product.producto[i].name %>" alt="<%=product.producto[i].name%>">
+							<% } %>
 					</figure>
 					<h2 class="product-box_data--h2">$<%=product.price %></h2>
 					<p class="product-box_data--p"><%=product.name %></p>
 				</a>
 				</section>
-			
 			<% }) %>
 		</div>
-
-
-
 </main>
-        
-
 
     <%- include('../partials/footer.ejs') %>
+
 </body>
 
 </html>
